--- a/design-your-life/src/index.css
+++ b/design-your-life/src/index.css
@@ -1,12 +1,14 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: #fff;
-  outline-color: black;
+  align-content: center;
+  font-family: "Open Sans", sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  background-image: url("https://images.unsplash.com/photo-1432821596592-e2c18b78144f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80");
+  background-color: #cccccc;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
 }
 
 code {
@@ -14,11 +16,7 @@ code {
     monospace;
 }
 
-.App {
-  font-family: 'Hepta Slab', serif;
-  text-align: center;
-  padding: 32px;
-}
+
 
 h1,
 h2 {
@@ -33,10 +31,10 @@ form {
 }
 
 input, textarea {
-  width: 200px;
+
   padding: 15px 22px;
   margin: 10px 5px;
-  box-sizing: border-box;  
+ 
   border-radius: 4px;
 
 }
@@ -48,8 +46,38 @@ label {
 }
 
 
+.journal-form{
+    align-content: center;
+    width: 460px;
+    margin: auto 100px;
+    padding: 32px;
+    font-weight: bold;
+    background-color: teal;
+    border-radius: 3%;
+    box-shadow: 2px 2px 10px 10px rgba(0, 0, 0, 0.1);
+  }
 
+      .activity-box{
+         padding: .5rem;
+         margin-top: 30px;
+      }
 
+      .mood-buttons{
+        margin-top: 30px;
+        display: flex;
+        justify-content: space-evenly;
+
+      }
+
+  input
+      {
+    margin-top: 32px;
+    padding: 3rem;
+    font-size: 16px;
+    width: 80%;
+    color: #111111;
+    border: 2px solid gray;
+  }
 
 /* 
 @main-color: #fff;
