--- a/design-your-life/src/index.css
+++ b/design-your-life/src/index.css
@@ -1,13 +1,90 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  align-content: center;
+  font-family: "Open Sans", sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  background-image: url("https://images.unsplash.com/photo-1432821596592-e2c18b78144f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80");
+  background-color: #cccccc;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+
+
+h1,
+h2 {
+  margin-top: 0;
+}
+
+form {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  outline-color: black;
+}
+
+input, textarea {
+
+  padding: 15px 22px;
+  margin: 10px 5px;
+ 
+  border-radius: 4px;
+
+}
+
+label {
+  margin-bottom: -12px;
+  text-align: left;
+  width: 200px;
+}
+
+
+.journal-form{
+    align-content: center;
+    width: 460px;
+    margin: auto 100px;
+    padding: 32px;
+    font-weight: bold;
+    background-color: teal;
+    border-radius: 3%;
+    box-shadow: 2px 2px 10px 10px rgba(0, 0, 0, 0.1);
+  }
+
+      .activity-box{
+         padding: .5rem;
+         margin-top: 30px;
+      }
+
+      .mood-buttons{
+        margin-top: 30px;
+        display: flex;
+        justify-content: space-evenly;
+
+      }
+
+  input
+      {
+    margin-top: 32px;
+    padding: 3rem;
+    font-size: 16px;
+    width: 80%;
+    color: #111111;
+    border: 2px solid gray;
+  }
+
+/* 
+@main-color: #fff;
+@font-color: #000;
+@button-color: #060;
+@border-color: #046604;
+
+@tablet: ~'(min-width: 700px)';
+
+@desktop ~'(min-width: 1000px)'; */
