--- a/design-your-life/src/index.css
+++ b/design-your-life/src/index.css
@@ -11,16 +11,17 @@ body {
 
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.error {
+  margin: 0;
+  position: absolute;
+  color: red;
 }
-
-
 
 h1,
 h2 {
   margin-top: 0;
+  font-family: 'Metal Mania', cursive;
+  color: white;
 }
 
 form {
@@ -49,10 +50,11 @@ label {
 .journal-form{
     align-content: center;
     width: 460px;
-    margin: auto 100px;
+    margin: 0 auto;
+    margin-top: 100px;
     padding: 32px;
     font-weight: bold;
-    background-color: teal;
+    background-color: rgba(0, 128, 128, 0.555);
     border-radius: 3%;
     box-shadow: 2px 2px 10px 10px rgba(0, 0, 0, 0.1);
   }
@@ -63,7 +65,7 @@ label {
       }
 
       .mood-buttons{
-        margin-top: 30px;
+        margin-top: 20px;
         display: flex;
         justify-content: space-evenly;
 
@@ -78,6 +80,20 @@ label {
     color: #111111;
     border: 2px solid gray;
   }
+
+  .checkbox-container{
+    display: flex;
+    justify-content: space-evenly;
+      position: relative;
+      margin-top: 20px;
+      cursor: pointer;
+      font-size: 18px;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+    }
+  
 
 /* 
 @main-color: #fff;
