--- a/design-your-life/src/index.css
+++ b/design-your-life/src/index.css
@@ -64,17 +64,9 @@ label {
          margin-top: 30px;
       }
 
-      .mood-buttons{
-        margin-top: 20px;
-        display: flex;
-        justify-content: space-evenly;
-
-      }
 
   input
       {
-    margin-top: 32px;
-    padding: 3rem;
     font-size: 16px;
     width: 80%;
     color: #111111;
@@ -94,6 +86,35 @@ label {
       user-select: none;
     }
   
+   
+    button {
+      max-width: 150px;
+      margin: 32px 0;
+      padding: 12px 20px;
+      border-style: none;
+      border-radius: 4px;
+      background-color: #14586b;
+      box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
+      font-size: 17px;
+      font-weight: 500;
+      color: #fff;
+      cursor: pointer;
+      outline: none;
+      -webkit-appearance: none;
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* 
 @main-color: #fff;
