--- a/design-your-life/src/App.css
+++ b/design-your-life/src/App.css
@@ -4,6 +4,14 @@
   align-items: center;
   justify-content: center;
   font-family: 'Calligraffitti', cursive;
+  align-content: center;
+  font-family: "Open Sans", sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  background-image: url("https://images.unsplash.com/photo-1432821596592-e2c18b78144f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80");
+  background-color: #cccccc;
+  background-position: center;
+  background-repeat: no-repeat;
 
 }
 
