--- a/design-your-life/src/index.css
+++ b/design-your-life/src/index.css
@@ -1,6 +1,9 @@
+@import url("https://fonts.googleapis.com/css?family=Amita&display=swap");
+
+
 body {
   align-content: center;
-  font-family: "Open Sans", sans-serif;
+  font-family: 'Amita', cursive;
   font-size: 16px;
   line-height: 1.5;
   background-image: url("https://images.unsplash.com/photo-1432821596592-e2c18b78144f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80");
@@ -11,16 +14,11 @@ body {
 
 }
 
-.error {
-  margin: 0;
-  position: absolute;
-  color: red;
-}
 
 h1,
 h2 {
   margin-top: 0;
-  font-family: 'Metal Mania', cursive;
+  font-family: 'Amita', cursive;
   color: white;
 }
 
@@ -32,12 +30,19 @@ form {
 }
 
 input, textarea {
-
   padding: 15px 22px;
+  width: 80%;
+  height: 80%;
   margin: 10px 5px;
- 
+  border: 2px solid #14586b;
+  max-width: 100%;
   border-radius: 4px;
+  color: black;
 
+}
+
+.placeholder{
+  color: black;
 }
 
 label {
@@ -69,22 +74,9 @@ label {
       {
     font-size: 16px;
     width: 80%;
-    color: #111111;
-    border: 2px solid gray;
+    color: black;
+    border: 2px solid #14586b;
   }
-
-  .checkbox-container{
-    display: flex;
-    justify-content: space-evenly;
-      position: relative;
-      margin-top: 20px;
-      cursor: pointer;
-      font-size: 18px;
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
-      user-select: none;
-    }
   
    
     button {
@@ -103,8 +95,45 @@ label {
       -webkit-appearance: none;
     }
 
+    .entry {
+      background:white;
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+      width: 80%;
+      max-width: 400px;
+      padding: 32px;
+      margin: 0 auto;
+      text-align: left;
+      border-radius: 5px;
+    }
+    .entry-header{
+      color: black;
+    }
 
 
+     .mood-select {
+      display: block;
+      font-size: 16px;
+      font-family: 'Lemonada', cursive;
+      color: #444;
+      line-height: 1.3;
+      padding: 0.6em 1.4em 0.5em 0.8em;
+      width: 80%;
+      max-width: 100%;
+      box-sizing: border-box;
+      margin: 0;
+      margin-top: px;
+      border: 2px solid #14586b;
+      box-shadow: 0 1px 0 1px rgba(0, 0, 0, 0.04);
+      -moz-appearance: none;
+      -webkit-appearance: none;
+      appearance: none;
+      background-color: #fff;
+      background-image: url("data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E"),
+        linear-gradient(to bottom, #ffffff 0%, #e5e5e5 100%);
+      background-repeat: no-repeat, repeat;
+      background-position: right 0.7em top 50%, 0 0;
+      background-size: 0.65em auto, 100%;
+    }
 
 
 
