--- a/design-your-life/src/index.css
+++ b/design-your-life/src/index.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Amita&display=swap");
+@import url('https://fonts.googleapis.com/css?family=Amita|Lemonada&display=swap');
 
 
 body {
@@ -68,8 +69,13 @@ label {
          padding: .5rem;
          margin-top: 30px;
       }
+      .activity{
+        font-family: 'Lemonada', cursive;
+      }
 
-
+.reflection{
+  font-family: 'Lemonada', cursive;
+}
   input
       {
     font-size: 16px;
@@ -113,7 +119,7 @@ label {
      .mood-select {
       display: block;
       font-size: 16px;
-      font-family: 'Lemonada', cursive;
+      font-family: "Open Sans", sans-serif;
       color: #444;
       line-height: 1.3;
       padding: 0.6em 1.4em 0.5em 0.8em;
