--- a/design-your-life/src/App.css
+++ b/design-your-life/src/App.css
@@ -25,3 +25,12 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+
+.i-link {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    color: #ecf0f1;
+    text-decoration: none;
+    padding: 5px;
+}
